--- a/main.css
+++ b/main.css
@@ -32,8 +32,11 @@
     background-color: rgba(202, 116, 66, 0.3)
 }
 
-.outcomeonegif{
+.outcomeonegif {
     display: flex;
     justify-content: center;
     align-content: center;   
 }
+
+.content {
+    
